# universalis-alerts

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
devenv/: docker-compose.yml  prometheus.yml
devenv/sqlinit/: 04-CreateUserAlertsNextTable.sql
src/: discord.rs  errors.rs  main.rs  trigger.rs  universalis.rs  xivapi.rs
