[package]
name = "universalis-alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.14"
error-chain = "0.12.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tungstenite = "0.18.0"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.0.0"
futures-util = "0.3"
futures-channel = "0.3"
bson = "2.5.0"
mysql_async = "0.31.2"
itertools = "0.10.5"
dotenv = "0.15.0"
cached = "0.42.0"
log = "0.4.17"
env_logger = "0.10.0"
